--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "flowbite": "^1.6.3",
+    "flowbite-react": "^0.3.8",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -27,6 +29,8 @@
     "husky": "^8.0.0",
     "lint-staged": "^13.1.2",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.3",
     "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.6"
   }
