--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,11 @@
 {
-  "*.ts": ["prettier --write", "eslint"],
-  "*.html": ["eslint", "prettier --write"],
+  "*.ts": [
+    "prettier --write",
+    "eslint"
+  ],
+  "*.html": [
+    "eslint",
+    "prettier --write"
+  ],
   "*.scss": "prettier --write"
 }
